<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/large_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_rect_grey"
        android:orientation="vertical"
        android:paddingLeft="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_user"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/login_user_tips"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#BEBEBE" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/login_password_tips"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/btn_commit"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logon_regest"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/login_reset"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/orange" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/line" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/small_margin"
        android:text="不是会员也能直接预订,享受快捷"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#BEBEBE" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_btn"
        android:text="@string/login_unregest" />

</LinearLayout>