<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/large_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_rect_grey"
        android:orientation="vertical"
        android:paddingLeft="@dimen/small_margin"
        android:paddingRight="@dimen/small_margin" >

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/register_phone_tips"
                android:inputType="phone"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/get_identify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/linearlayout1"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@drawable/identify_tips"
            android:padding="@dimen/small_margin"
            android:text="@string/get_identify"
            android:textColor="@android:color/white" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/linearlayout1"
            android:background="#BEBEBE" />

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:layout_below="@+id/view1"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/register_password_tips"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/linearlayout2"
            android:background="#BEBEBE" />

        <LinearLayout
            android:id="@+id/linearlayout3"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:layout_below="@+id/view2"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/multi_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/register_password_tips"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/linearlayout3"
            android:background="#BEBEBE" />

        <LinearLayout
            android:id="@+id/linearlayout4"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:layout_below="@+id/view3"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identify_code"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/identify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/identify_code_tips"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/btn_commit"
        android:text="@string/register_send"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

</LinearLayout>