<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center_vertical"
    android:orientation="vertical"
     >

    <RelativeLayout
        android:layout_margin="@dimen/default_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:background="@drawable/shape_round_rect_grey" >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/small_margin" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/phone_tips_2"
                android:inputType="textPhonetic"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout"
            android:background="@color/color_grey" />

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_height"
            android:layout_below="@+id/divider"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/small_margin" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/identify_code_2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/identify_code_tips_2"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/layout"
            android:layout_alignParentRight="true"
            android:background="@drawable/identify_tips"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@android:color/white"
            android:text="@string/get_identify" />
    </RelativeLayout>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_bar_height"
        android:layout_margin="@dimen/max_margin"
        android:background="@drawable/btn_commit"
        android:text="@string/order_search"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <include layout="@layout/bottom_tabbar" />

</LinearLayout>